# ChangeLog for x11-wm/evilwm
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/evilwm/ChangeLog,v 1.17 2004/01/11 13:53:56 lanius Exp $

  11 Jan 2004; Heinrich Wendel <lanius@gentoo.org> evilwm-0.99.14.ebuild,
  evilwm-0.99.17.ebuild:
  fixed motif dep

  09 Jan 2004; Jason A Mobarak <aether@gentoo.org> evilwm-0.99.16.ebuild,
  evilwm-0.99.17.ebuild:
  Removed 0.99.16, moved 0.99.17 to x86.

  05 Jan 2004; Jason Wever <weeve@gentoo.org> evilwm-0.99.14.ebuild:
  Marked stable on sparc.

  28 Nov 2003; Mike Gardiner <obz@gentoo.org> evilwm-0.99.14.ebuild,
  evilwm-0.99.16.ebuild, evilwm-0.99.17.ebuild, evilwm-0.99.4.ebuild:
  IUSE added to all ebuilds (motif or '' as appropriate)

*evilwm-0.99.17 (04 Nov 2003)

  04 Nov 2003; Brandon Hale <tseng@gentoo.org> evilwm-0.99.17.ebuild,
  metadata.xml:
  Version bump, adding metadata.xml

*evilwm-0.99.16 (18 Sep 2003)

  18 Sep 2003; Seemant Kulleen <seemant@gentoo.org> evilwm-0.99.16.ebuild:
  version bump

  09 Feb 2003; Aron Griffis <agriffis@gentoo.org> evilwm-0.99.14.ebuild :
  Add ~alpha to KEYWORDS

*evilwm-0.99.14 (09 Feb 2003)

  09 Mar 2003; Aron Griffis <agriffis@gentoo.org> evilwm-0.99.14.ebuild:
  Mark stable on alpha

  09 Feb 2003; Seemant Kulleen <seemant@gentoo.org> evilwm-0.99.14.ebuild
  files/digest-evilwm-0.99.14 :

  Version bump.

*evilwm-0.99.11 (23 Nov 2002)

  09 Feb 2003; Seemant Kulleen <seemant@gentoo.org> evilwm-0.99.11.ebuild :

  Made virtual/motif a USE flag based DEPEND, and did sed-fu to make it
  optional in the makefile.  Closes bug #15356 by: Pierre-Olivier Bouchard
  <petecoolrulez@hotmail.com>. Moved to x86 profile

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  23 Nov 2002; Sascha Schwabbauer <cybersystem@gentoo.org> evilwm-0.99.11.ebuild :

  Added ~ppc to keywords.

*evilwm-0.99.11 (12 Nov 2002)

  12 Nov 2002; Brad Cowan <bcowan@gentoo.org> evilwm-0.99.11.ebuild,