@@ -1,11 +1,11 @@
-MD5 7af787ac379a1700f3ec9fe87c7e8013 ChangeLog 1616
-MD5 e94620afc62b58cd80aa508b273f8d15 oroborus-2.0.13.ebuild 1148
+MD5 6b93ff0f7adbaef1d0144219dc662465 oroborus-2.0.9.ebuild 1102
 MD5 03ad9cf9a8c9fd1affb90443ae247f6b oroborus-2.0.4-r1.ebuild 1081
 MD5 65d579f74f5ba92c2e2ad51c47bbf371 oroborus-2.0.7.ebuild 1092
-MD5 ac0a30c30bb8d321e72183c9f3718a0e oroborus-2.0.9.ebuild 1099
+MD5 e94620afc62b58cd80aa508b273f8d15 oroborus-2.0.13.ebuild 1148
+MD5 3ae71de08d89972dcad9dead86366492 ChangeLog 1713
 MD5 6f678fec0c073bdd194cc247a444ae0e metadata.xml 492
-MD5 917859f4dd075888e0c2ffe0cac12f50 files/digest-oroborus-2.0.13 69
-MD5 7fcf6981c9d6d5af5b4e0c30558dbd08 files/digest-oroborus-2.0.4-r1 66
+MD5 a6eaa4a58b9b8d1ca30c9dad6b738e08 files/oroborus.desktop 100
 MD5 bcdeedeb1449ba297399d6ca934f174c files/digest-oroborus-2.0.7 68
 MD5 76979c6dea7bc0482c31850c6c22e2d7 files/digest-oroborus-2.0.9 68
-MD5 a6eaa4a58b9b8d1ca30c9dad6b738e08 files/oroborus.desktop 100
+MD5 7fcf6981c9d6d5af5b4e0c30558dbd08 files/digest-oroborus-2.0.4-r1 66
+MD5 917859f4dd075888e0c2ffe0cac12f50 files/digest-oroborus-2.0.13 69
