@@ -1,10 +1,10 @@
 MD5 74bd84edc07a51201cb558490fda957a sawfish-1.3.ebuild 2241
-MD5 250c4f016eb8edc01594b453c07424db sawfish-1.3.20040120.ebuild 2700
+MD5 3862715e98c749c92871bf57fa7fd0b3 sawfish-1.3.20040120.ebuild 2702
 MD5 912a38d9daeef09c925d30b1a7ecb6fc sawfish-1.3-r2.ebuild 2127
 MD5 b340c65f9f8a378aff72ff032f9280f5 sawfish-1.2.ebuild 2223
 MD5 12589c6a3a29aa851c46dbdd6aa47f51 sawfish-1.0.1-r6.ebuild 2050
 MD5 1cf40cbc9390cc195751d8147e6fb5ed sawfish-1.3-r1.ebuild 2041
-MD5 65eef2235856c773d2d26df40fc00b32 ChangeLog 6941
+MD5 83b098f3f896e2285b6438024686921f ChangeLog 7045
 MD5 87cb07e2d3612bc798e3722f4f882671 metadata.xml 250
 MD5 b09128ca8933c55c66e2e09437baa4f7 sawfish-1.3-r3.ebuild 2404
 MD5 05f0a5e78bf6c00c05a7b6fce1369f95 sawfish-1.0.1-r5.ebuild 2013
