@@ -1,6 +1,6 @@
-MD5 2d2912db8023d7e74c46d7250a638dd1 treewm-0.4.5.ebuild 855
+MD5 29ab12551774362a1d70b0dd731700a3 treewm-0.4.5.ebuild 852
 MD5 57564654838316a56926edf687d9b01b treewm-0.4.4.ebuild 685
-MD5 5650ea1b5482b6997cd03687225c571d ChangeLog 1553
+MD5 9727f6da2a1bfd6db36b81864c71431e ChangeLog 1643
 MD5 a53ed9b76c9a4a50872d58aeee4d66d0 metadata.xml 426
 MD5 18cde1faa2834be4486edcdfe64a447a files/digest-treewm-0.4.4 64
 MD5 0ff668f3a047f8841efdfc9cbfc96639 files/digest-treewm-0.4.5 64
