@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/evilwm
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/evilwm/ChangeLog,v 1.17 2004/01/11 13:53:56 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/evilwm/ChangeLog,v 1.18 2004/02/26 02:51:40 bazik Exp $
+
+  26 Feb 2004; Sven Blumenstein <bazik@gentoo.org> evilwm-0.99.17.ebuild:
+  Stable on sparc!
 
   11 Jan 2004; Heinrich Wendel <lanius@gentoo.org> evilwm-0.99.14.ebuild,
   evilwm-0.99.17.ebuild:
